# BiomechPriorVAE

./: .gitignore  README.md  pyproject.toml  vaeReconstructionTerm.m
data/model/: gait3d_pelvis213_Innsbruck_scaled_s01_baseline.osim
notebook/: latent_space_analysis.ipynb
result/model/: BiomechPriorVAE_best.pth  scaler.pkl
scripts/: CODrunning3DwthMeasuredIMU.m  b3dconverter.py  datavisualize_maro.py  running3D.m  script3D.m  scriptCODfromMeasIMU.m  standing3D.m  test.py  test_vaemodel.py  vaemodel.py  vaetrainer.py  vtp_to_ply.py
src/: datavisualize.py  vaemodel.py  vaetrainer.py
src/data/: addBiomechanicsDataset.py
