[project]
name = "biomechpriorvae"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fau-colors>=1.10.1",
    "ipykernel>=7.0.1",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.10.7",
    "nbstripout>=0.8.1",
    "nimblephysics>=0.10.52.1",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pytest>=8.4.2",
    "scikit-learn>=1.7.2",
    "torch>=2.9.0",
    "tqdm>=4.67.1",
]
